--- a/src/index.css
+++ b/src/index.css
@@ -2,5 +2,15 @@ body {
     padding: 0;
     margin: 0;
 
+    height: 100vh;
+    width: 100vw;
+    overflow: hidden;
+
     font-family: sans-serif;
+}
+
+#root {
+    height: 100%;
+    width: 100%;
+    overflow: hidden;
 }
