--- a/src/index.css
+++ b/src/index.css
@@ -4,13 +4,11 @@ body {
 
     height: 100vh;
     width: 100vw;
-    overflow: hidden;
 
     font-family: sans-serif;
 }
 
 #root {
-    height: 100%;
-    width: 100%;
-    overflow: hidden;
+    height: 100vh;
+    width: 100vw;
 }
